Featured Issue #14: Added testint configuration + fixed missing ClassTag Error